...
        TimetableSubjectItem(
            color = Color.Green,
            weight = .3f,
            subject = "Mathematics",
            room = "423"
        )
        TimetableSubjectItem(color = Color.Yellow, weight = .3f, subject = "German", room = "4354")
        TimetableSubjectItem(color = Color.Cyan, weight = .3f, subject = "History", room = "654")
        TimetableSubjectItem(color = Color.Magenta, weight = .3f, subject = "English", room = "443")
        TimetableSubjectItem(
            color = Color.LightGray,
            weight = .3f,
            subject = "Economy",
...
