...
            text = "30:70",
            borderColor = Color.Gray,
            fredoka = fredoka,
            onClick = { viewModel.roundOffPercentage(0.30f) }
        )
        Chip(
            text = "50:50",
            borderColor = Color.Gray,
            fredoka = fredoka,
            onClick = { viewModel.roundOffPercentage(0.50f) }
        )
        Chip(
            text = "70:30",
...
