...
        if (!editState.value) {
            val subject = Subject(
                -1,
                "",
                0,
                "",
                50.0,
                1.0,
                1.0
            )
            onEvent(ExamEvent.SetPickedSubjectState(subject))
        }

...
